
Copyright (c) 1998-2009 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.38.0 - December 3, 2009

    Added a new compiler flag, "clean", for cleaning the intermediate Prolog
    files generated when compiling Logtalk source files.

    Simplified representation of the runtime execution context using a simple
    list resulting in a small performance increase for some back-end Prolog
    compilers such as B-Prolog.

    Added support for using the set_logtalk_flag/2 directive within Logtalk
    entities. This allows e.g. easy setting of entity properties such as
    "events" when creating new entities using the entity creation built-in
    predicates. Updated documentation on the set_logtalk_flag/2 directive
    and the set_logtalk_flag/2 built-in predicate exceptions.

    Added support for runtime instantiation of the <</2 control construct
    arguments.

    Added support for specifying multiple initialization/1 directives when
    using the create_object/4, create_category/4, and create_protocol/3
    built-in predicates.

    Corrected a bug where some entity properties would not be set when using
    the create_object/4, create_category/4, and create_protocol/3 built-in
    predicates.

    Corrected a bug (introduced in version 2.37.4) when simplifying calls
    to the {}/1 external call control construct with a variable argument.

    Updated the Logtalk compiler to workaround file path problems with
    back-end Prolog compilers (e.g. SICStus Prolog) where calls to the
    open/3-4 built-in predicate are not always relative to the current
    working directory.

    Improved Logtalk runtime error handler when using SWI-Prolog as the
    back-end compiler.
