@@ -1,0 +1,19 @@
+================================================================
+Logtalk - Open source object-oriented logic programming language
+Release 2.38.0
+
+Copyright (c) 1998-2009 Paulo Moura.        All Rights Reserved.
+Logtalk is free software.  You can redistribute it and/or modify
+it under the terms of the "Artistic License 2.0" as published by 
+The Perl Foundation. Consult the "LICENSE.txt" file for details.
+================================================================
+
+
+To load this example and for sample queries, please see the SCRIPT 
+file.
+
+This folder contains examples of using the experimental support for
+lambda expressions, which is based on the syntax found on the Ulrich
+Neumerkel's proposal:
+
+http://www.complang.tuwien.ac.at/ulrich/Prolog-inedit/ISO-Hiord
