@@ -1,0 +1,6 @@
+
+:- initialization((
+	logtalk_load(library(metapredicates_loader)),
+	logtalk_load(library(types_loader)),
+	logtalk_load(lambdas)
+)).
