@@ -30,7 +30,7 @@
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: November 19, 2009</span>
+		<span>Last updated on: December 3, 2009</span>
 	</div>
 	<div class="navbottom">
 		<span>&nbsp;</span><br/>
