@@ -788,6 +788,27 @@ The Logtalk grammar is here described using Backus-Naur Form syntax. Non-termina
 			<dd>object_identifier "<code>&lt;&lt;</code>" <em>goal</em></dd>
 	</dl>
 
+<h2 id="grammar_lambdas">Lambda expressions</h2>
+
+	<dl>
+		<dt>lambda_expression ::=</dt>
+			<dd>lambda_free_variables "<code>/</code>" lambda_parameters "<code>&gt;&gt;</code>" <em>callable</em> |</dd>
+			<dd>lambda_free_variables "<code>/</code>" <em>callable</em> |</dd>
+			<dd>lambda_parameters "<code>&gt;&gt;</code>" <em>callable</em> |</dd>
+	</dl>
+
+	<dl>
+		<dt>lambda_free_variables ::=</dt>
+			<dd>"<code>{</code>" <em>conjunction of variables</em> "<code>}</code>" |</dd>
+			<dd>"<code>{}</code>"
+	</dl>
+
+	<dl>
+		<dt>lambda_parameters ::=</dt>
+			<dd><em>list of terms</em> |</dd>
+			<dd>"<code>[]</code>"
+	</dl>
+
 <h2 id="grammar_entity_properties">Entity properties</h2>
 
 	<dl  id="grammar_category_property">
@@ -845,7 +866,7 @@ The Logtalk grammar is here described using Backus-Naur Form syntax. Non-termina
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: June 30, 2009</span>
+		<span>Last updated on: December 3, 2009</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="index.html">previous</a> | <a href="../glossary.html">glossary</a> | <a href="index.html">next</a></span><br/>
