@@ -65,7 +65,11 @@
 </dl>
 
 <dl class="toc-entries">
-	<dt><a href="grammar.html#grammar_clauses">Clauses</a><span class="leader"></span><span class="page-ref"><span class="grammar_clauses"></span></span></dt>
+	<dt><a href="grammar.html#grammar_clauses">Clauses and goals</a><span class="leader"></span><span class="page-ref"><span class="grammar_clauses"></span></span></dt>
+</dl>
+
+<dl class="toc-entries">
+	<dt><a href="grammar.html#grammar_lambdas">Lambda expressions</a><span class="leader"></span><span class="page-ref"><span class="grammar_lambdas"></span></span></dt>
 </dl>
 
 <dl class="toc-entries">
@@ -345,7 +349,7 @@
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: November 19, 2009</span>
+		<span>Last updated on: December 3, 2009</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="../glossary.html">glossary</a></span><br/>
